# ia-tp2-csp

./: README.md  pyproject.toml  ruff.toml
logs/: 2025-10-02_14-43-14_ours.txt  2025-10-02_16-28-18-025472_ours.txt  2025-10-02_16-28-18-061900_ours.txt  2025-10-02_16-28-18-091159_ours.txt  2025-10-02_16-30-36-288643_ours.txt  2025-10-02_16-43-57-317926_ours.txt  2025-10-02_16-43-57-355370_ours.txt  2025-10-02_16-43-58-233957_ours.txt  2025-10-02_16-43-58-303326_ours.txt  2025-10-02_17-09-22-668382_ours.txt  2025-10-02_17-09-22-766076_ours.txt  2025-10-02_17-09-23-020390_ours.txt  2025-10-02_18-19-57-340585_ours.txt  2025-10-02_18-19-57-495097_ours.txt  2025-10-02_18-19-57-893905_ours.txt  2025-10-02_18-19-58-227323_ours.txt  Ejecucion01.txt  Ejecucion02.txt  Ejecucion03.txt  Ejecucion04.txt  Ejecucion05.txt  Ejecucion06_Final.txt  Ejecucion06_Final_Resumido.txt
src/tp2_csp/: __init__.py
src/tp2_csp/logger/: __init__.py  logger.py
src/tp2_csp/ours/: __init__.py  algorithm.py  individual.py  notebook.ipynb  parameters.py  plot.py  result.py
src/tp2_csp/pygad_csp/: __init__.py  algorithm.py  generalized_order_crossover.py
src/tp2_csp/v1/: __init__.py  v1.py
src/tp2_csp/v2/: __init__.py  algorithm.py  common_types.py  individual.py  notebook.ipynb  parameters.py  result.py  v2.py
src/tp2_csp/v3/: __init__.py  algorithm.py  individual.py
