[project]
name = "tp2-csp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ezequiel Saidman", email = "ezequiel.saidman@chevron.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.9",
    "pygad>=3.5.0",
    "tzdata>=2025.2",
]

[project.scripts]
tp2-csp = "tp2_csp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
